temp/idp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: idp
  name: idp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idp
  template:
    metadata:
      labels:
        app: idp
    spec:
      containers:
      - name: idp
        # image: grouper0822.azurecr.io/grouper-idp:latest
        # imagePullPolicy: "Always"
        image: grouper-idp
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 4443
        resources: {}
          # requests:
          #   memory: "128Mi"
          #   cpu: "512m"
          # limits:
          #   memory: "4068Mi"
          #   cpu: "10000m"
      restartPolicy: Always
      serviceAccountName: ""

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: idp
  name: idp
spec:
  ports:
  - name: "4443"
    port: 4443
    targetPort: 4443
  selector:
    app: idp
  type: ClusterIP
