temp/grouper-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grouper-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - localhost
    secretName: grouper-ingress-tls
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: idp
          servicePort: 4443
        path: /idp(/|$)(.*)
      - backend:
          serviceName: ui
          servicePort: 80
        path: /(.*)
